# lambda_clock

./: .gitignore  README.md  pyproject.toml  samconfig.toml  template.yml
.devcontainer/normal/: devcontainer.json  postCreateCommand.sh
.github/workflows/: deploy.yml  test.yml
images/: unscii.pbm  unscii.pil  unscii_16.pbm  unscii_16.pil
scripts/: build.sh  deploy.sh
src/: handler.py
src/clocklambda/: __init__.py  show_time.py  utils.py
src/timelambda/: utils.py
tests/: test_show_time.py  test_utils.py
